fixed mobile text alignment

--- a/css/artist.css
+++ b/css/artist.css
@@ -54,6 +54,17 @@ li > a:focus {
 		margin-left: 0px;
 		margin-right: 0px;
 	}
+
+	p {
+		text-align: left;
+		font-size: 18px;
+	}
+	
+	h1 {
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
 }
 
 @media (max-width: 980px) and (min-width: 768px) {
